objects/LLC_BI__Field_Map__c.object
<CustomObject>
    <description>The Field Map Object is used to specify fields from one object and populate another. it helps mitigate data re-entry. This object allows the user to create the link (&quot;map&quot;) from one field to another</description>
    <fields>
        <fullName>LLC_BI__Orig_Obj_Field__c</fullName>
        <description>This field is required and is manually populated. This text field is used to specify the field on the originating object in which the data will be mapped from during the conversion process.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Originating Obj Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Orig_Obj__c</fullName>
        <description>This field is required and is manually populated. This text field is used to specify the object in which the data will be mapped from during the conversion process.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Originating Obj</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Relationship_Type__c</fullName>
        <description>This field is required and is manually populated. It is used during conversion processes to specify the type of relationship the field map should be respected for.</description>
        <label>Relationship Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Company</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>Sole Proprietorship</fullName>
                </value>
                <value>
                    <fullName>Trust</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Target_Obj_Field__c</fullName>
        <description>This field is required and is manually populated. This text field is used to specify the field on the target object in which the data from the originating object/field will be mapped to during the conversion process.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Target Obj Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Target_Obj__c</fullName>
        <description>This field is required and is manually populated. This text field is used to specify the object in which the data from the originating object/field will be mapped to during the conversion process.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Target Obj</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Field Map</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Orig_Obj__c</columns>
        <columns>LLC_BI__Orig_Obj_Field__c</columns>
        <columns>LLC_BI__Target_Obj__c</columns>
        <columns>LLC_BI__Target_Obj_Field__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Field Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>